--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
             </footer>
         </div>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="media/js/vendor/jquery-1.8.2.min.js"><\/script>')</script>
+        <script src="media/js/vendor/jquery-1.8.2.min.js"></script>
         <script src="media/js/plugins.js"></script>
         <script src="media/js/main.js"></script>
         
